@@ -2,8 +2,9 @@
 2.2 Beta 2  2013-05-10
 ---------------------------------------
 - phone number will show only when selected by the user as the way to contact (chefry/mamba)
--
-
+- moved hard-coded 404 error text to language file
+- fixed: ad owner cannot edit his ad, when set to "inactive"
+- removed encoded footer
 
 ---------------------------------------
 2.2 Beta 1  2013-03-13
